fixed spacing in header

--- a/application/themes/evi/css/evi-custom.css
+++ b/application/themes/evi/css/evi-custom.css
@@ -512,6 +512,12 @@ footer#footer-theme .footer-copyright {
   .hp-content-pic-right.questions {
     padding-top: 60px !important;
   }
+  .col-content {
+    margin-top: 0;
+  }
+  h1 {
+    margin-top: 0;
+  }
   .col-content .main-top-banner h1{
     font-size: 5.0em;
     margin-bottom: 0px;
@@ -537,6 +543,13 @@ footer#footer-theme .footer-copyright {
 }
 /* Portrait tablets and small desktops */
 @media (min-width: 768px) and (max-width: 991px) {
+  .col-content {
+    left: 15%;
+    width: 86% !important;
+  }
+  h1 {
+    margin-top: 0;
+  }
   .hp-main-banner h1 {
     font-size: 2.8em !important;
   }
@@ -588,6 +601,9 @@ footer#footer-theme .footer-copyright {
     width: 100% !important;
     padding:0 !important;
     left: 0;
+  }
+  h1 {
+    margin-top: 0;
   }
   .ccm-custom-style-container {
     padding: 0 !important;
@@ -678,6 +694,9 @@ footer#footer-theme .footer-copyright {
   .col-content {
     left: 0;
     width: 100%;
+  }
+  h1 {
+    margin-top: 0;
   }
   /* Mainbody */
   .main-top-banner {
